Fix header row alignment in verb paradigms

--- a/resources/assets/sass/paradigm-table.scss
+++ b/resources/assets/sass/paradigm-table.scss
@@ -67,20 +67,20 @@
         z-index: 9;
     }
 
-    .is-row-0 th {
-        top: 0;
-    }
+    //.is-row-0 th {
+        //top: 0;
+    //}
 
-    .is-row-1 th {
-        top: 3rem;
-    }
+    //.is-row-1 th {
+        //top: 3rem;
+    //}
 
-    .is-row-2 th {
-        top: 6rem;
-    }
+    //.is-row-2 th {
+        //top: 6rem;
+    //}
 
-    .is-row-3 th {
-        top: 9rem;
-    }
+    //.is-row-3 th {
+        //top: 9rem;
+    //}
 
 }
